--- a/grupo/Sites/.env.dev
+++ b/grupo/Sites/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='troustsolutions'
 DB_USER='root'
-DB_PASSWORD='Amofamilia@5'
+DB_PASSWORD='---'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
