--- a/grupo/Sites/.env
+++ b/grupo/Sites/.env
@@ -7,6 +7,9 @@ DB_USER='seusDadosAqui'
 DB_PASSWORD='seusDadosAqui'
 DB_PORT='seusDadosAqui'
 
+#Bob
+MINHA_CHAVE='AIzaSyCHb13uceN_E_yTsKVIzktf5kL2ewGz1tI'
+
 # Configurações do servidor de aplicação
 APP_PORT=8080
 APP_HOST=localhost
