--- a/grupo/Sites/.env.dev
+++ b/grupo/Sites/.env.dev
@@ -7,6 +7,9 @@ DB_USER='TrutaFeliz'
 DB_PASSWORD='Trut@Trist3'
 DB_PORT=3306
 
+#
+MINHA_CHAVE='AIzaSyCHb13uceN_E_yTsKVIzktf5kL2ewGz1tI'
+
 # Configurações do servidor de aplicação
 APP_PORT=3333
 APP_HOST=localhost
