--- a/grupo/Sites/.env
+++ b/grupo/Sites/.env
@@ -8,7 +8,7 @@ DB_PASSWORD='seusDadosAqui'
 DB_PORT='seusDadosAqui'
 
 #Bob
-MINHA_CHAVE='AIzaSyCHb13uceN_E_yTsKVIzktf5kL2ewGz1tI'
+MINHA_CHAVE=''
 
 # Configurações do servidor de aplicação
 APP_PORT=8080
